# galib

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  ga_libfunc.c  ga_libfunc.c.in  ga_private.h  ga_private.h.in  ga_set_func.c  ga_set_func.c.in  galib.h  galib.h.in
test/: CMakeLists.txt  easom_function.c  ga_math_problem.c  ga_simple_problem.c  ga_test.c  taylor_series.c  test_ga_remove.c  test_ga_remove_same_chro.c  test_ga_set_crossover.c
